# ziyiai

./: .gitignore  README.md  pyproject.toml  requirements-desktop.txt
.github/workflows/: build-windows-exe.yml
data/: eth_coingecko.csv  eth_okx.csv  eth_okx_15m.csv  sample_eth.csv
docs/plans/: 2026-04-12-15m-mtf-productization-plan.md  2026-04-12-eth-backtesting-system-mvp.md  2026-04-12-okx-15m-intraday-strategy-plan.md  2026-04-12-windows-desktop-live-data-tradingview-plan.md  2026-04-13-okx-standalone-trading-terminal-plan.md
presets/: okx_15m_macd_aggressive.json  okx_15m_mtf_production_candidate.json
src/eth_backtester/: __init__.py  backtest.py  cli.py  dashboard_server.py  data.py  download.py  indicators.py  intraday.py  live.py  market_analysis.py  models.py  okx_private.py  okx_ws_public.py  optimize.py  report.py  signals.py  strategy.py  validation.py
tests/: test_backtest.py  test_okx_ws_public.py
tradingview/: eth_15m_mtf_product_candidate.pine
web-dashboard/: app.js  index.html  styles.css
windows-desktop/: ETH_15M_Signal_Desktop.bat  ETH_15M_Signal_Desktop.spec  ETH_15M_Web_Dashboard.bat  ETH_15M_Web_Dashboard.spec  build_web_dashboard_exe.bat  build_windows_exe.bat  eth_signal_desktop.pyw  eth_web_dashboard_launcher.py
